# theater-app

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  .test.env.example  Makefile  README.md  alembic.ini  docker-compose.test.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2adc0a8a86c2_change_model_fields.py  30c71b201567_change_fields.py  4c9e3982a64b_create_user_theatrical_role_.py  4ef6789fa0fc_create_theatrical_role_table.py  6616b8872c4a_create_users_table.py  b0b8be704576_create_events_performances.py
backend/src/: main.py
backend/src/commands/: alembic_migration.py
backend/src/commands/managers/: alembic_migration.py
backend/src/core/: deps.py  enums.py  logger.py
backend/src/core/config/: common.py  settings.py
backend/src/core/database/: db.py
backend/src/core/enums/: __init__.py  base.py  environment.py  gender.py  genre.py  log_level.py  roles.py  sort_order.py
backend/src/core/exceptions/: __init__.py  base.py  http_exception.py  query_builder_exception.py  validation_exception.py
backend/src/core/middlewares/: __init__.py  cors_middleware.py  logging_middleware.py  server_exception_middleware.py
backend/src/core/schemas/: __init__.py  base.py  (+1 more)
backend/src/db_managers/: __init__.py  base.py  events.py  performance.py  theatrical_roles.py  users.py
backend/src/endpoints/: __init__.py
backend/src/models/: __init__.py  events.py  performance.py  performances.py  theatrical_roles.py  users.py
backend/src/schemas/: base.py
backend/src/services/: __init__.py  base.py  theatrical_roles.py  users.py
backend/src/utils/: __init__.py  log.py  normalise.py  url_for.py
backend/tests/endpoints/: healthcheck.py  test_healthcheck.py
backend/tests/fixtures/: __init__.py  database_setup.py  event_loop.py  faker.py  http_client.py  session.py
backend/tests/schemas/: test_query.py
(+37 files in other folders)
